syntax = "proto3";

package kafka.protobuf_serde.generated;

message PrimitiveMessage {
  int64 timestamp = 1;
  string query = 2;
  int32 page_number = 3;
  int32 result_per_page = 4;
}

message ComplexMessage{
  int64 timestamp = 1;
  map<string, int32> storage = 2;
  repeated int32 arr = 3;
}

message NestedMessage{
  int64 timestamp = 1;
  int32 id = 2;
  PrimitiveMessage primitiveMsg = 3;
}

